Add docker and docker compose